@@ -39,6 +39,13 @@ update-copyright
 valgrind-tests
 "
 
+src_gnulib_modules="
+gettime
+progname
+read-file
+version-etc-fsf
+"
+
 # Build prerequisites
 buildreq="\
 autoconf   2.64
@@ -62,6 +69,8 @@ fi
 
 bootstrap_post_import_hook ()
 {
+  ${GNULIB_SRCDIR}/gnulib-tool --import --libtool --m4-base=src/gl/m4 --macro-prefix=sgl --lib=libsgl --source-base=src/gl --local-dir=src/gl --tests-base=src/gl/tests --no-conditional-dependencies --without-tests $src_gnulib_modules
+
   # Automake requires that ChangeLog exist.
   touch ChangeLog || return 1
 }
