@@ -2,6 +2,7 @@ GNU Libtasn1 NEWS                                     -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 - Improve GTK-DOC manual.  Closes: #35.
+- Improve --help and --version for tools with gnulib.  Closes: #37.
 
 * Noteworthy changes in release 4.17.0 (2021-05-13) [stable]
 - Print deprecation messages for deprecated macros, thanks to Tim Rühsen.
